// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PreviewButton when in curve engraving mode 1`] = `
<div>
  <div
    class="container active"
    title="3D Curve"
  >
    <div
      class="button"
    >
      <svgr-url />
      <div
        class="title"
      >
        3D Curve
      </div>
    </div>
  </div>
</div>
`;

exports[`test PreviewButton when not previewing 1`] = `
<div>
  <div
    class="container"
    title="preview_title"
  >
    <div
      class="button"
    >
      <svgr-url />
    </div>
  </div>
</div>
`;

exports[`test PreviewButton when path previewing 1`] = `<div />`;

exports[`test PreviewButton when previewing and not support borderless 1`] = `
<div>
  <div
    class="container active"
    title="preview_title"
  >
    <div
      class="button"
    >
      <svgr-url />
      <div
        class="title"
      >
        PREVIEW
      </div>
    </div>
  </div>
</div>
`;

exports[`test PreviewButton when previewing and support borderless 1`] = `
<div>
  <div
    class="container active"
    title="preview_title"
  >
    <div
      class="button"
    >
      <svgr-url />
      <div
        class="title"
      >
        PREVIEW (OPEN BOTTOM)
      </div>
    </div>
  </div>
</div>
`;
